# rag-use-cases-lc

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
multimodal-pdf-rag/: mm_rag_pdf_sum.py  pdf_loader_pymypdf.ipynb  pdf_loading_with_pymupdf.ipynb  pdf_rag.ipynb  pdf_rag.py  pdf_rag_clip.ipynb  pdf_rag_clip.py  pdf_text_extract.py
multimodal-pdf-rag/chroma_db/: chroma.sqlite3
multimodal-web-rag/: web_summarize_rag.ipynb  web_summarize_rag.py
multimodal-web-rag/chroma_db/: chroma.sqlite3
